--- a/home.html
+++ b/home.html
@@ -9,39 +9,45 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="images/logo.png" alt="">
+    <div class="home-section">
+         <header class="header">
+            <nav class="navc">
+                <div class="logo">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <ul>
+                    <li class="list"><a href="home.html" class="link">Home</a></li>
+                    <li class="list"><a href="calculator.html" class="link">Calculator</a></li>
+                    <li class="list"><a href="bid.html" class="link">Bidsphere</a></li>
+                    <li class="list"><a href="schemes.html" class="link">Schemes</a></li>
+                    <li class="list"><a href="engineers.html" class="link">Engineers</a></li>
+                    <li class="list"><a href="" class="link">MY profile</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <img  class="bac-image"  src="images/train.jpg" alt="">
+            <div class="overlay"></div>
+            <div class="content">
+                <div class="h-title">
+                    <h4>Cost-craft</h4>
+                </div>
+                <div class="catchy-line">
+                    <h1>Build smarter, bid better</h1>
+                </div>
+                <div class="abstract">
+                    <p>"At CostCraft, we predict construction costs with precision and empower users to reduce expenses through strategic bidding. Join us in revolutionizing construction economics and building smarter projects."</p>
+                </div>
             </div>
-            <ul>
-                <li class="list a"><a href="home.html" class="link">Home</a></li>
-                <li class="list b"><a href="calculator.html" class="link">Calculator</a></li>
-                <li class="list c"><a href="bid.html" class="link">Bidsphere</a></li>
-                <li class="list d"><a href="schemes.html" class="link">Schemes</a></li>
-                <li class="list e"><a href="engineers.html" class="link">Engineers</a></li>
-                <li class="list f"><a href="" class="link">MY profile</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class=" con cont1">
-            <div class="al">
-                <h1 class="head">SUGGESTION</h1>
-            </div>
-        </div>
-        <div class="con cont2">
-            <div class="al">
-                <h1 class="head">MATERIALS</h1>
-            </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
         <div class="box">
 
         </div>
     </footer>
-
+   <script src="navbar.js"></script>
 </body>
+
 
 </html>
