--- a/calculator.html
+++ b/calculator.html
@@ -9,39 +9,62 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="images/logo.png" alt="">
+    <div class="home-section">
+        <header class="header">
+            <nav class="navc">
+                <div class="logo">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <ul>
+                    <li class="list"><a href="home.html" class="link">Home</a></li>
+                    <li class="list"><a href="calculator.html" class="link">Calculator</a></li>
+                    <li class="list"><a href="bid.html" class="link">Bidsphere</a></li>
+                    <li class="list"><a href="schemes.html" class="link">Schemes</a></li>
+                    <li class="list"><a href="engineers.html" class="link">Engineers</a></li>
+                    <li class="list"><a href="" class="link">MY profile</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="cal-section">
+                <div class="box">
+                    <div class="c-overlay"></div>
+                    <img src="images/calculator.jpg" alt="" class="cal-image">
+                </div>
+                <div class="con-box">
+                    <div class="ele">
+                    <div class="container">
+                        <div class="input-group">
+                            <label for="houseType">House Type*</label>
+                            <select id="houseType" name="houseType">
+                                <option value="basic" selected>basic</option>
+                                <option value="premium" selected>Premium</option>
+                            </select>
+                        </div>
+                    
+                        <div class="input-group">
+                            <label for="area">Area*</label>
+                            <input type="number" id="area" name="area" placeholder="Sq.Feet">
+                        </div>
+                    
+                        <div class="input-group">
+                            <label for="pincode">Pincode*</label>
+                            <input type="text" id="pincode" name="pincode" placeholder="Pincode">
+                        </div>
+                    </div>
+                    <button  class='su' type="submit">Calculate Cost</button>
+                </div>
+                </div>
             </div>
-            <ul>
-                <li class="list a"><a href="home.html" class="link">Home</a></li>
-                <li class="list b"><a href="calculator.html" class="link">Calculator</a></li>
-                <li class="list c"><a href="bid.html" class="link">Bidsphere</a></li>
-                <li class="list d"><a href="schemes.html" class="link">Schemes</a></li>
-                <li class="list e"><a href="engineers.html" class="link">Engineers</a></li>
-                <li class="list f"><a href="" class="link">MY profile</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="top">
-            <h1 class="head">CALCULATOR</h1>
-        </div>
-        <div class="middle">
 
-        </div>
-        <div class="bottom">
-            <h1 class="head"><a href="">START BIDDING</a></h1>
-        </div>
-
-    </main>
+        </main>
+    </div>
     <footer>
         <div class="box">
 
         </div>
     </footer>
-
+    <script src="navbar.js"></script>
 </body>
 
 </html>
