--- a/schemes.html
+++ b/schemes.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav class="navc">
             <div class="logo">
                 <img src="images/logo.png" alt="">
             </div>
             <ul>
-                <li class="list a"><a href="home.html" class="link">Home</a></li>
-                <li class="list b"><a href="calculator.html" class="link">Calculator</a></li>
-                <li class="list c"><a href="bid.html" class="link">Bidsphere</a></li>
-                <li class="list d"><a href="schemes.html" class="link">Schemes</a></li>
-                <li class="list e"><a href="engineers.html" class="link">Engineers</a></li>
-                <li class="list f"><a href="" class="link">MY profile</a></li>
+                <li class="list"><a href="home.html" class="link">Home</a></li>
+                <li class="list"><a href="calculator.html" class="link">Calculator</a></li>
+                <li class="list"><a href="bid.html" class="link">Bidsphere</a></li>
+                <li class="list"><a href="schemes.html" class="link">Schemes</a></li>
+                <li class="list"><a href="engineers.html" class="link">Engineers</a></li>
+                <li class="list"><a href="" class="link">MY profile</a></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +46,7 @@
 
         </div>
     </footer>
-
+    <script src="navbar.js"></script>
 </body>
 
 </html>
