--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="home-section">
-         <header class="header">
+        <header class="header">
             <nav class="navc">
                 <div class="logo">
                     <img src="images/logo.png" alt="">
@@ -26,7 +26,7 @@
             </nav>
         </header>
         <main>
-            <img  class="bac-image"  src="images/train.jpg" alt="">
+            <img class="bac-image" src="images/train.jpg" alt="">
             <div class="overlay"></div>
             <div class="content">
                 <div class="h-title">
@@ -36,17 +36,132 @@
                     <h1>Build smarter, bid better</h1>
                 </div>
                 <div class="abstract">
-                    <p>"At CostCraft, we predict construction costs with precision and empower users to reduce expenses through strategic bidding. Join us in revolutionizing construction economics and building smarter projects."</p>
+                    <p>"At CostCraft, we predict construction costs with precision and empower users to reduce expenses
+                        through strategic bidding. Join us in revolutionizing construction economics and building
+                        smarter projects."</p>
                 </div>
             </div>
         </main>
+        <section class="materials">
+            <div class="cont-m">
+                <h1 class="h-head">"Wanna find material for your dream house,User?</h1>
+                <div class="date-cont">
+                    <div class="dateItemBox d">
+                        <div class="d_circle">
+                        </div>
+                        <div class="d_info">
+                            <p class="d_da">
+                                Cement,Steel and Tiles
+                            </p>
+                            <p class="dc_info">
+                                <a href="https://www.buildersmart.in/">Click here</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="dateItemBox d">
+                        <div class="d_circle">
+                        </div>
+                        <div class="d_info">
+                            <p class="d_da">
+                                For Hardware Products
+                            </p>
+                            <p class="dc_info">
+                                <a href="https://www.thesolvere.life/">Click here</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="dateItemBox d">
+                        <div class="d_circle">
+                        </div>
+                        <div class="d_info">
+                            <p class="d_da">
+                                For Paintings and Coatings
+                            </p>
+                            <p class="dc_info">
+                                <a href="https://www.constrobazaar.com/">Click here</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="dateItemBox d">
+                        <div class="d_circle">
+                        </div>
+                        <div class="d_info">
+                            <p class="d_da">
+                                Plumbing and electrics
+                            </p>
+                            <p class="dc_info">
+                                <a href="https://builders9.com/">Click here</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sec-3">
+            <div class="b">
+            <h1 class="h2-head">Inspire Your Style: Top Picks Await!</h1>
+            <div class="one-item">
+                <h2 class="items">Cement</h2>
+                <div class="mat-flex">
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 1</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="one-item">
+                <h2 class="items">Bricks</h2>
+                <div class="mat-flex">
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 1</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="one-item">
+                <h2 class="items">Steel</h2>
+                <div class="mat-flex">
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 1</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                    <div class="mat-flex-item">
+                        <img src="images/object.jpg" alt="">
+                        <h1>Material 2</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
     </div>
     <footer>
         <div class="box">
 
         </div>
     </footer>
-   <script src="navbar.js"></script>
+    <script src="navbar.js"></script>
 </body>
 
 
