--- a/bid.html
+++ b/bid.html
@@ -18,9 +18,9 @@
                 <li class="list"><a href="home.html" class="link">Home</a></li>
                 <li class="list"><a href="calculator.html" class="link">Calculator</a></li>
                 <li class="list"><a href="bid.html" class="link">Bidsphere</a></li>
-                <li class="list"><a href="schemes.html" class="link">Schemes</a></li>
-                <li class="list"><a href="engineers.html" class="link">Engineers</a></li>
-                <li class="list"><a href="" class="link">MY profile</a></li>
+                <li class="list"><a href="s-c-h-e-m-e.html" class="link">Schemes</a></li>
+                <li class="list"><a href="ENGINEER.html" class="link">Engineers</a></li>
+                <li class="list"><a href="profile.html" class="link">MY profile</a></li>
             </ul>
         </nav>
     </header>
