--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <input type="password" placeholder="Password" id="password">
                         <img src="images/eye-close.png" alt="" id="eyeicon">
                     </div>
-                    <button>Create Account</button>
+                    <button> <a href="home.html" class="signup">Create Account</a></button>
                 </form>
                 <p>Already have a account <a href="login.html">Log in</a></p>
             </div>
