--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                         <input type="password" placeholder="Password" id="password">
                         <img src="images/eye-close.png" alt="" id="eyeicon">
                     </div>
-                    <button>Log in</button>
+                    <button> <a class="login" href="home.html">Log in</a></button>
                     
                 </form>
                 <a id="forgot">Forgotten your password?</a>
